Fix dashboard control button styles

--- a/src/visualization/templates/dashboard.html
+++ b/src/visualization/templates/dashboard.html
@@ -297,12 +297,12 @@
                     
                     <div class="row g-2 mb-3">
                         <div class="col-4">
-                            <button class="btn btn-success btn-sm w-100" id="pauseBtn">
+                            <button class="btn btn-warning btn-sm w-100" id="pauseBtn">
                                 <i class="fas fa-pause"></i> Pause
                             </button>
                         </div>
                         <div class="col-4">
-                            <button class="btn btn-primary btn-sm w-100" id="resumeBtn">
+                            <button class="btn btn-success btn-sm w-100" id="resumeBtn">
                                 <i class="fas fa-play"></i> Resume
                             </button>
                         </div>
