--- a/src/simulacra/visualization/templates/unified_interface.html
+++ b/src/simulacra/visualization/templates/unified_interface.html
@@ -11,6 +11,7 @@
     
     <!-- Custom Styles -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/unified_interface.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/wizard.css') }}">
 </head>
 <body>
     <!-- Main Navigation -->
@@ -104,7 +105,7 @@
                     <div class="col-md-6">
                         <div class="card">
                             <div class="card-header">
-                                <h5><i class="fas fa-zap"></i> Quick Actions</h5>
+                                <h5><i class="fas fa-bolt"></i> Quick Actions</h5>
                             </div>
                             <div class="card-body">
                                 <div class="d-grid gap-2">
